kubernetes/infrastructure/vm-proxies/pihole.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.68.55
    ports:
      - port: 80
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pihole.home.mcztest.com
    secretName: pihole-tls
  rules:
  - host: pihole.home.mcztest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole
            port:
              number: 80
