kubernetes/infrastructure/vm-proxies/proxmox.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.68.2
    ports:
      - port: 8006
        name: https
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: default
spec:
  ports:
  - port: 8006
    targetPort: 8006
    name: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/websocket-services: "proxmox"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Proto https;
      proxy_set_header X-Forwarded-Host $host;
      proxy_set_header X-Forwarded-Port 443;
      proxy_ssl_verify off;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - proxmox.home.mcztest.com
    secretName: proxmox-tls
  rules:
  - host: proxmox.home.mcztest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox
            port:
              number: 8006
